# ibm2ieee

./: .gitignore  .travis.yml  CHANGES  LICENSE  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  ibm2ieee.c  ibm_floats.txt  pyproject.toml  setup.py  test_ibm2ieee.py
.github/workflows/: build-wheel.yml  run-tests.yml  test-from-pypi.yml  test-requirements.txt  upload-to-pypi.yml
ibm2ieee/: __init__.py  _ibm2ieee.c  version.py
ibm2ieee/test/: __init__.py  test_ibm2ieee.py  test_version.py
