[build-system]
requires = ['oldest-supported-numpy', 'setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 79
target-version = ['py36']

[tool.isort]
profile = 'black'
line_length = 79
order_by_type = 'False'

[tool.cibuildwheel]
skip = "pp* *-musllinux*"

[tool.cibuildwheel.macos]
archs = ["auto", "universal2"]

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]
