[build-system]
requires = ['oldest-supported-numpy', 'setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'ibm2ieee'
version = '1.3.1'
description = 'Convert IBM hexadecimal floating-point to IEEE 754 floating-point'
readme = 'README.rst'
requires-python = ">=3.7"
license = {file = 'LICENSE.txt'}
authors = [{name = 'Enthought', email = 'info@enthought.com'}]
keywords = ['ibm', 'hfp', 'ieee754', 'hexadecimal', 'floating-point', 'ufunc']
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
]
dependencies = ['numpy']

[project.urls]
readme = 'https://github.com/enthought/ibm2ieee/blob/main/README.rst'
repository = 'https://github.com/enthought/ibm2ieee'
issues = 'https://github.com/enthought/ibm2ieee/issues'

[tool.setuptools.packages.find]
include = ['ibm2ieee*']

[tool.black]
line-length = 79
target-version = ['py36']

[tool.isort]
profile = 'black'
line_length = 79
order_by_type = 'False'

[tool.cibuildwheel]
skip = "pp* *-musllinux*"

[tool.cibuildwheel.macos]
archs = ["auto", "universal2"]

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]
